--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.3.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.28.0",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
